build in query/detail endpoints + patch method

--- a/application/templates/response.html
+++ b/application/templates/response.html
@@ -1,14 +1,3 @@
 <h1>{{ status }}</h1>
-{{ production }}
-<br>
-{{ production.genres.all }}
-<br>
-{{ production.directors.all }}
-<br>
-{{ production.reviews.all }}
-<br><br><br>
-{{ objects }}
-<br>
-<br>
-<br>
-{{ content }}
+<h2>{{ message }}</h2>
+<h2>{{ content }}</h2>
